# ILStudio

./: .gitignore  .gitmodules  MASK_CONFIG_FORMAT.md  MASK_FEATURE_SUMMARY.md  README.md  collect_data.py  data  eval.py  eval_libero.py  eval_real.py  eval_real_v2.py  eval_sim.py  pyproject.toml  requirements-new.txt  requirements.txt  requuirements-new.txt  setup.py  start_policy_server.py  start_teleop_controller.py  start_teleop_reader.py  start_teleop_recorder.py  test_act-mujoco.py  test_bridge.py  test_cam.py  test_d4rl.py  test_maniskill.py  test_mlp_config.py  test_mlp_policy.py  test_openvla.py  test_openvla_simple.py  test_panda_gym.py  tmp.py  train.py  train_new.py  visualize_episode.py
.cursor/rules/: policy-rule.mdc
benchmark/: base.py  utils.py
benchmark/act_mujoco/: __init__.py  ee_sim_env.py  sim_env.py
benchmark/aloha/: __init__.py  ee_sim_env.py  sim_env.py  utils.py
benchmark/calvin/: README.md  __init__.py
benchmark/gymnasium_robotics/: README.md  __init__.py
benchmark/libero/: README.md  __init__.py  pyproject.toml
benchmark/mani_skill/: __init__.py
benchmark/metaworld/: __init__.py  task_desc.py
benchmark/panda_gym/: README.md  __init__.py
benchmark/robomimic/: __init__.py  constant.py
benchmark/robotwin/: README.md
benchmark/simplerenv/: README.md  __init__.py
configs/: README.md  __init__.py  loader.py  parameter_merger.py  utils.py
configs/env/: aloha.yaml  d4rl_door.yaml  libero.yaml  panda_gym.yaml  panda_gym_dense.yaml  robomimic.yaml
configs/policy/: README.md  README_openvla.md  act.yaml  act_bz.yaml  act_droid.yaml  act_koch.yaml  act_libero.yaml  act_mw.yaml  act_robomimic.yaml  diffusion_policy.yaml  divla.yaml  dp_d4rl.yaml  mlp.yaml  mlp_camera.yaml  mlp_d4rl_door.yaml  mlp_large.yaml  mlp_small.yaml  octo_aloha.yaml  openvla.yaml  openvla_full.yaml  pi0.yaml  pi0_aloha.yaml  pi0fast.yaml  qwen25dp.yaml  qwen2dp.yaml  rdt.yaml  smolvla.yaml
configs/robot/: README_robots.md  agilex_aloha.yaml  agilex_aloha_teleop.yaml  bi_so101_follower.yaml  dummy.yaml  koch_follower.yaml  koch_follower_win.yaml  so101_follower.yaml  so101_follower_blk.yaml  so101_follower_win.yaml
configs/task/: NutAssemblySquare_Panda.yaml  agilex_transfer_cube.yaml  aloha_transfer_cube.yaml  backward_compatible_example.yaml  bc_z.yaml  berkeley_autolab_ur5.yaml  bridge_data_v2.yaml  d4rl_debug.yaml  debug.yaml  droid_mini.yaml  example_tasks.yaml  example_with_norm_mask.yaml  flexible_dataset_example.yaml  insertion_expert.yaml  insertion_human.yaml  insertion_mixed.yaml  insertion_top.yaml  koch_pick_red_cap.yaml  lerobot_aloha.yaml  lerobot_bridge_v2.yaml  lerobot_libero.yaml  lerobot_metaworld.yaml  libero_10.yaml  libero_all.yaml  libero_goal.yaml  libero_object.yaml  libero_object_1.yaml  libero_spatial.yaml  libero_test.yaml  loader.py  mixed_datasets_example.yaml  openx_mini.yaml  robomimic_nut_square.yaml  robomimic_square.yaml  robomimic_square_ph.yaml  sii_cut_steak.yaml  sii_pick_twice.yaml  (+13 more)
configuration/: constants.py  utils.py
data\pick_red_cap_into_cup/: episode_0000.hdf5
data_utils/: FLEXIBLE_DATASET_SUMMARY.md  NORMALIZER_WRAPPER_GUIDE.md  README.md  data_loader.py  dataset.py  dataset_config_examples.md  dataset_wrappers.py  normalize.py  rotate.py  statistic.py  test_dataset_wrappers.py  utils.py  view_h5.py
deploy/: __init__.py  action_manager.py  action_manager_2.py  controller.py
docs/: 10_custom_benchmarks.md  11_custom_robots.md  12_action_manager.md  1_overview.md  2_quick_start.md  3_evaluation_in_simulation.md  4_evaluation_in_the_real_world.md  5_evaluation_with_policy_server.md  6_data_collection.md  7_custom_datasets.md  8_custom_policies.md  9_custom_trainers.md  POLICY_SERVER_GUIDE.md  REMOTE_EVAL_GUIDE.md
examples/: 1_ACT_and_LIBERO.md
method/: __init__.py
policy/: direct_loader.py  policy_loader.py  trainer.py  utils.py
policy/octo/: README.md  __init__.py  data_utils.py  modeling.py  pyproject.toml
policy/qwen2dp/: __init__.py  data_utils.py  modeling.py  policy.py  pyproject.toml  trainer.py
scripts/: eval_act_aloha_insertion.sh  eval_act_aloha_transfer.sh  eval_act_robomimic_square.sh  eval_dp_transfer copy.sh  eval_openvla_example.sh  example_eval.sh  example_eval_comprehensive.sh  example_eval_openvla.sh  example_eval_policies.sh  example_eval_real_policies.sh  example_eval_remote.sh  example_train.sh  example_train_dp.sh  example_train_openvla.sh  example_train_policies.sh  train_act_aloha_transfer.sh  train_act_human_insertion.sh  train_act_human_transfer.sh  train_act_insertion.sh  train_act_robomimic_square.sh  train_act_sii_pick_twice.sh  train_act_zscore.sh  train_dexvla_all_vision.sh  train_difusion_zscore.sh  train_divla.sh  train_dp_aloha_insertion.sh  train_dp_aloha_transfer.sh  train_libero_object.sh  train_openvla_example.sh  train_qdp_pipe.sh  train_qdp_zscore.sh  visualize_sii_dataset.sh  zero2.json
vla/: utils.py
(+277 files in other folders)
