[build-system]
requires = ["hatchling"]   
build-backend = "hatchling.build"

[project]
name = "octo"               
version = "0.1.0"
description = "JAX-based RL training pipeline"
readme = "README.md"
requires-python = ">=3.10.14,<3.11"  

dependencies = [
    "gym>=0.26",
    "numpy==1.24.3",
    "ml-dtypes==0.2.0",
    "chex==0.1.85",
    "optax==0.1.5",
    "tensorflow-probability==0.23.0",
    "tensorflow==2.15.0",
    "jax==0.4.20",
    "jaxlib==0.4.20",
    "distrax==0.1.5",
    "flax==0.7.5",
    "ml-collections>=0.1.0",
    "tqdm>=4.60.0",
    "absl-py>=0.12.0",
    "scipy==1.12.0",
    "wandb>=0.12.14",
    "einops>=0.6.1",
    "imageio>=2.31.1",
    "moviepy>=1.0.3",
    "pre-commit==3.3.3",
    "transformers>=4.34.1",
    "tensorflow-hub>=0.14.0",
    "tensorflow-text>=2.13.0",
    "tensorflow-datasets==4.9.2",
    "tensorflow-graphics==2021.12.3",
    "plotly>=5.16.1",
    "matplotlib",
    "torch>=2.2.0",         
    "torchvision>=0.17.0",  
    "accelerate>=0.27.0",
    "peft", 
    "tianshou==0.2.0", 
    "robosuite==1.4.0",
]

[tool.uv]
default-groups = [] 